Fix SVG header wrap, footer source links

--- a/resources/assets/sass/chart.scss
+++ b/resources/assets/sass/chart.scss
@@ -355,7 +355,7 @@
 	}
 	.nvd3 text {
 		font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-		font-size: 0.8rem;
+		font-size: 0.7rem;
 	}
 	.nvd3 .nv-axis .nv-axisMaxMin text {
 		font-weight: normal;
